# iced_video

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
cpal-testing/: Cargo.toml
cpal-testing/src/: main.rs
examples/: iced.rs
examples/basic/: Cargo.toml
examples/basic copy/src/: main.rs
examples/basic/src/: main.rs
examples/ffmpeg-basic/: Cargo.toml
examples/ffmpeg-basic/src/: main.rs  theme.rs
examples/gifs/: Cargo.toml
examples/gifs/src/: get_gifs.rs  main.rs
examples/multiple_videos/: Cargo.toml
examples/multiple_videos/src/: main.rs
ffmpeg-playbin/: Cargo.toml
ffmpeg-playbin-next/: Cargo.toml
ffmpeg-playbin-next/src/: lib.rs  playbins.rs  player.rs
ffmpeg-playbin/src/: audio.rs  error.rs  frame.rs  lib.rs  main.rs  playbin.rs  player.rs  reader.rs
ffmpeg-playbin/src/audio/: stream.rs
ffmpeg-playbin/src/decoder/: audio_decoder.rs  convert_audio.rs  mod.rs  video_decoder.rs
ffmpeg-playbin/src/ffi/: mod.rs
ffmpeg-playbin/src/helpers/: convert_audio.rs  mod.rs  playbin_trait.rs  time.rs  types.rs
ffmpeg-playbin/src/player/: audio.rs  video.rs
ffmpeg-playbin/src/render_queue/: mod.rs
ffmpeg-testing/: Cargo.toml
ffmpeg-testing/src/: lib.rs  main.rs  playbin.rs
ffmpeg-testing/src/playbin/: decoder.rs  image.rs  playbin_trait.rs  reader.rs  types.rs
ffmpeg-testing/src/player/: error.rs  ffi.rs  init.rs  mod.rs
ffmpeg-testing/src/player/ffi/: video_frame.rs
gstreamer-playbin/: Cargo.toml
gstreamer-playbin/src/: error.rs  extra_functions.rs  lib.rs  player.rs  tag_convert.rs  unsafe_functions.rs
playbin-core/: Cargo.toml
playbin-core/src/: image_trait.rs  lib.rs  player_builder.rs  player_message.rs  player_traits.rs
player/: Cargo.toml
player/src/: main.rs  state.rs  subscriptions.rs  update.rs  view.rs
player/src/theme/: button.rs  svg.rs
player/src/update/: menu_event.rs  player_event.rs
player/src/view/: controls.rs  image.rs  menu.rs
playerust/: Cargo.toml  README.md
playerust/src/: main.rs  state.rs  subscriptions.rs  theme.rs  update.rs  view.rs
playerust/src/components/keypress/: subscription.rs  update.rs
playerust/src/componets/: mod.rs
playerust/src/componets/keypress/: mod.rs  subscription.rs  update.rs
playerust/src/helpers/: component_trait.rs  componet_trait.rs  mod.rs  open_file.rs
playerust/src/theme/: application.rs  button.rs  container.rs  slider.rs  text.rs
playerust/src/update/: menu_event.rs  player_event.rs
playerust/src/view/: controls.rs  image.rs  menu.rs
src/: backends.rs  iced_subscription.rs  lib.rs  overlay.rs  player.rs  player_builder.rs  player_handler.rs  svgs.rs  video_handler.rs  video_settings.rs  viewer.rs
src/backends/: gstreamer.rs
src/backends/gstreamer/: error.rs  extra_functions.rs  mod.rs  tag_convert.rs
src/helpers/: helper_functions.rs  mod.rs  player_backend.rs  svgs.rs
wgpu_testing/: Cargo.toml
wgpu_testing/src/: gpu_controller.rs  main.rs  player.rs  texture.rs
