[package]
edition = "2021"
name = "iced_video"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
derive_more = "*"
gst = {package = "gstreamer", version = "0.20", features = ["serde"]}
gst_app = {package = "gstreamer-app", version = "0.20"}
gst_video = {package = "gstreamer-video", version = "0.20"}
log = "0.4"
tokio = {version = "1.24.2", features = ["sync"]}

[dependencies.iced]
features = ["tokio", "debug", "image", "svg", "advanced"]
version = "0.10"

[workspace]
members = [
  "playerust",
  "examples/*",
  "ffmpeg-playbin",
]

[features]
default = ["gstreamer"]
gstreamer = []
