[package]
edition = "2021"
name = "iced_video"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
tokio = {version = "1.24.2", features = ["sync"]}
tracing = "0.1"

playbin-core = {path = "./playbin-core"}

ffmpeg-playbin = {path = "./ffmpeg-playbin", optional = true}
gstreamer-playbin = {path = "./gstreamer-playbin", optional = true}

iced.workspace = true


[workspace]
members = [
  "playerust",
  "examples/*",
  "ffmpeg-playbin",
  "gstreamer-playbin",
  "playbin-core",
]
resolver = "2"

[workspace.dependencies]
iced = { version = "0.12.1", features = ["tokio", "debug", "image", "svg", "advanced"] }
iced_video = {path = "."}

[features]
default = ["gstreamer"]
gstreamer = ["gstreamer-playbin"]
ffmpeg = ["ffmpeg-playbin"]

