[package]
edition = "2021"
name = "iced_video"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
tokio = {version = "1.24.2", features = ["sync"]}
tracing = "0.1"

playbin-core = {path = "./playbin-core"}

ffmpeg-playbin = {path = "./ffmpeg-playbin", optional = true}
gstreamer-playbin = {path = "./gstreamer-playbin", optional = true}

iced.workspace = true


[workspace]
members = [
  "playerust",
  "examples/*",
  "ffmpeg-playbin",
  "gstreamer-playbin",
  "playbin-core",
]
resolver = "2"

[workspace.dependencies]
iced = { git = "https://github.com/iced-rs/iced.git",rev = "23a7e9f981728e8a95039db8eb8e9f3d8c6ba3d7", features = ["tokio", "debug", "image", "svg", "advanced"] }
iced_video = {path = "."}

[features]
default = ["gstreamer"]
gstreamer = ["gstreamer-playbin"]
ffmpeg = ["ffmpeg-playbin"]

