[package]
name = "ffmpeg-playbin"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ffmpeg = {package = "ffmpeg-next", version = "6.1.1", features = ["format", "codec", "software-resampling", "software-scaling"]}
tokio = {version = "1", features = ["full"]}
smol = { version = "2" }
tracing = "0.1"
cpal = "0.15.2"
ringbuf = "0.3.3"
futures = { version = "0.3.28" }
anyhow = "1"
bytemuck = "1"
derive_more = "0.99"

playbin-core = { path = "../playbin-core" }

[dependencies.iced]
features = ["tokio", "debug", "image", "svg", "canvas"]
version = "0.10"