[package]
name = "ffmpeg-testing"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ffmpeg = { package = "ffmpeg-next",  version = "6.0.0", features = ["format", "codec", "software-resampling", "software-scaling"] }
ndarray = "0.15.6"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
