[package]
name = "gstreamer-playbin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
playbin-core = { path = "../playbin-core" }
gst = {package = "gstreamer", version = "0.21", features = ["serde"]}
gst_app = {package = "gstreamer-app", version = "0.21"}
gst_video = {package = "gstreamer-video", version = "0.21"}