[package]
edition = "2021"
name = "gstreamer-playbin"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gst = {package = "gstreamer", version = "0.21", features = ["serde"]}
gst_app = {package = "gstreamer-app", version = "0.21"}
gst_video = {package = "gstreamer-video", version = "0.21"}
playbin-core = {path = "../playbin-core"}
tracing = "0.1"

