[package]
name = "player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
video_player = {path = "../", package = "iced_pure_video_player"}

[dependencies.iced]
features = ["tokio", "debug", "image", "svg", "canvas"]
version = "0.6"
