[package]
edition = "2021"
name = "player"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rfd = {git = "https://github.com/PolyMeilex/rfd", rev = "f565c622e343d0f21ea7d4134b55a4527955b9db"}
video_player = {path = "../", package = "iced_pure_video_player"}
env_logger = "0.10.0"

[dependencies.iced]
features = ["tokio", "debug", "image", "svg", "canvas"]
version = "0.6"
