[package]
edition = "2021"
name = "playerust"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rfd = {git = "https://github.com/PolyMeilex/rfd", rev = "f565c622e343d0f21ea7d4134b55a4527955b9db"}
iced_video.workspace = true
env_logger = "0.10.0"
log = "0.4.17"

[dependencies.iced]
features = ["tokio", "debug", "image", "svg", "canvas"]
workspace = true
