[package]
edition = "2021"
name = "wgpu_test"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytemuck = {version = "1.4", features = ["derive"]}
cfg-if = "1"
derive_more = "*"
env_logger = "0.9"
futures = "*"
log = "0.4"
pollster = "0.2"
video_player = {path = "../", package = "iced_pure_video_player"}
wgpu = "0.14"
winit = "0.27"

[dependencies.image]
default-features = false
features = ["png", "jpeg"]
version = "0.24"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "0.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = {version = "0.3", features = [
  "Document",
  "Window",
  "Element",
]}
wgpu = {version = "0.14", features = ["webgl"]}

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
