[package]
edition = "2021"
name = "gifs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
giphy = "0.4.1"
reqwest = {version = "0.11", features = ["blocking", "json"]}
serde = "1.0.149"
serde_derive = "1.0.149"
serde_json = "1.0.89"
video_player = {path = "../../", package = "iced_video"}
[dependencies.iced]
features = ["tokio", "debug", "image"]
version = "0.5"
