[package]
edition = "2021"
name = "multiple_videos"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
video_player = {path = "../../", package = "iced_video"}
[dependencies.iced]
features = ["tokio", "debug", "image"]
version = "0.6"
